<resources>
    <string name="app_name">易为易</string>
    <string name="sign_up_agree">注册即代表你同意本平台的</string>
    <string name="aser_agreement">《用户协议》</string>
    <string name="and">和</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="SMS_verification_code_login">短信验证码登录</string>
    <string name="enter_confirmation_code">输入验证码</string>
    <string name="SMS_verification_code_login_title">未注册手机验证后自动登录</string>
    <string name="verification_code_sent_to">验证码已发送至</string>
    <string name="area_code">+86</string>
    <string name="input_phone">请输入手机号</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="login">登录</string>
    <string name="wx_login">微信登录</string>
    <string name="local_number">本机号码:</string>
    <string name="switch_number">切换号码</string>
    <string name="search_title">真实货源\t即搜即得</string>
    <string name="personal_infor">个人信息</string>
    <string name="store_management">店铺管理</string>
    <string name="raw_material_market">原料行情</string>
    <string name="advisory_service">咨询客服</string>
    <string name="free_entry">免费入驻</string>
    <string name="feedback">意见反馈</string>
    <string name="set">设置</string>
    <string name="all_series">全部系列</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="empty">清空</string>
    <string name="store_manage">店铺管理</string>
    <string name="who_saw_me">谁看过我</string>
    <string name="call_records">通话记录</string>
    <string name="reliable">靠谱</string>
    <string name="basic_info">基本信息</string>
    <string name="head">头像</string>
    <string name="factory_name">厂名</string>
    <string name="principal">负责人</string>
    <string name="contact_number">联系电话</string>
    <string name="nickname">昵称</string>
    <string name="principal_">负责人：</string>
    <string name="phone_">电话:</string>
    <string name="more_number">更多号码</string>
    <string name="today_number">今日到访</string>
    <string name="visitors_number">到访人数</string>
    <string name="contact_times">联系次数</string>
    <string name="people_think__company_reliable">人觉得这家公司很靠谱</string>
    <string name="company_profile">公司简介</string>
    <string name="products_catalogue">产品图册</string>
    <string name="see_more">查看更多</string>
    <string name="real_view">实景展示</string>
    <string name="certifications">资质证书</string>
    <string name="contact_details">联系方式</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="sign_out">退出登录</string>
    <string name="please_enter_content_feedback">请输入要反馈的内容</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="feedback_title">感谢您帮助我们改进产品，我们会为您提供更好的体验</string>
    <string name="add_phone">添加电话号</string>
    <string name="delete">删除</string>
    <string name="change_username">修改昵称</string>
    <string name="username_">用户名:</string>
    <string name="confirm">确认</string>
    <string name="change_username_title">以英文字母或汉字开头，限4-16个字符，一个汉字为2个字符</string>
    <string name="date">日期</string>
    <string name="average_price">均价</string>
    <string name="ups_and_downs">涨跌</string>
    <string name="please_enter_valid_phone">请输入正确的手机号</string>
    <string name="word_limit_exceeded">超出字数限制</string>
    <string name="please_enter_feedback">请输入您需要反馈的内容</string>
    <string name="submitted_successfully">提交成功</string>
    <string name="registered_title">注册即代表你同意本平台的《用户协议》和《隐私政策》以及《中国移动认证服务条款》</string>
    <string name="close">关闭</string>
    <string name="dial">拨打</string>
    <string name="selectRegion">选择地区</string>
    <string name="current_area_underline"><u>设为常用地区</u></string>

</resources>