<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/viewTop"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/toolbar_iv_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:src="@drawable/close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTop" />

    <TextView
        android:id="@+id/SMS_verification_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/SMS_verification_code_login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_iv_back" />

    <TextView
        android:id="@+id/SMS_verification_code_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:text="@string/SMS_verification_code_login_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SMS_verification_code_login" />

    <LinearLayout
        android:id="@+id/phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SMS_verification_code_login_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/area_code"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="10dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="6dp"
            android:background="@color/colorBFBFBF" />

        <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone|number"
            android:maxLength="11"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="36dp"
        android:background="@color/colorEAEAEA"
        app:layout_constraintTop_toBottomOf="@id/phone_ll" />

    <com.qmuiteam.qmui.layout.QMUIButton
        android:id="@+id/login_qbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/ver_login_button_bg"
        android:enabled="false"
        android:gravity="center"
        android:minHeight="44dp"
        android:text="@string/send_verification_code"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/phone_ll" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/wx_login_qbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_yuanjiao_5_23ba09_click"
        android:drawableLeft="@drawable/wei_white"
        android:gravity="center"
        android:minHeight="44dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/wx_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login_qbt" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:text="@string/registered_title"
        android:textColor="@color/colorA0A0A0"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>