<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/SMS_verification_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="100dp"
        android:text="@string/SMS_verification_code_login"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/phone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="36dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SMS_verification_code_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/local_number"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="13811449210"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/switch_number_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/switch_number"
            android:textColor="@color/color0084FF" />

    </LinearLayout>

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/login_qbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_yuanjiao_5_ff0582_click"
        android:minHeight="44dp"
        android:text="@string/send_verification_code"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/phone_ll" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:id="@+id/wx_login_qbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/shape_yuanjiao_5_23ba09_click"
        android:drawableLeft="@drawable/wei_white"
        android:minHeight="44dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:text="@string/wx_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login_qbt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.qmuiteam.qmui.alpha.QMUIAlphaTextView
            android:id="@+id/protocol_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color295FA1"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>