<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/uesrname_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/username_"
        android:textColor="@color/color202020"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:padding="10dp"
        android:id="@+id/name_et"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="电线电缆批发"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uesrname_" />

    <TextView
        android:id="@+id/title_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:text="@string/change_username_title"
        android:textColor="@color/color484848"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/name_et" />

    <com.qmuiteam.qmui.alpha.QMUIAlphaButton
        android:layout_width="332dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_yuanjiao_5_0582fa"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_" />
</androidx.constraintlayout.widget.ConstraintLayout>
