<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/view_simple_topbar_white"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorECECEC">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/yijian_"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/feedback_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/please_enter_content_feedback"
                android:maxLength="200"
                android:padding="15dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="0/200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.qmuiteam.qmui.alpha.QMUIAlphaButton
            android:id="@+id/submit_feedback_bt"
            android:layout_width="264dp"
            android:layout_height="43dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_yuanjiao_7_357ee7"
            android:text="@string/submit_feedback"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yijian_" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/feedback_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_feedback_bt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

